--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "dbffile": "^1.12.0",
     "fast-xml-parser": "^5.3.4",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "yauzl": "^2.10.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/yauzl": "^2.10.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
