--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sax": "^1.4.4",
     "yauzl": "^2.10.0"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/sax": "^1.2.7",
     "@types/yauzl": "^2.10.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
